# Advent-of-Code

./: README.md  pyproject.toml
2021/day_15/: part_2.py
2021/day_21/: part_2.py
2021/day_22/: part_2.py
2023/day_01/: README.md
2023/day_02/: part_1.py  part_2.py
2023/day_03/: part_1.py  part_2.py
2023/day_04/: part_1.py  part_2.py
2023/day_05/: part_1.py  part_2.py
2023/day_06/: README.md
2023/day_07/: part_1.py  part_2.py
2023/day_08/: part_1.py  part_2.py
2023/day_09/: alt.py  part_1.py  part_2.py
2023/day_10/: part_1.py  part_2.py  visual.py
2023/day_12/: part_1.py  part_2.py
2023/day_14/: part_1.py  part_2.py
2023/day_15/: part_1.py  part_2.py
2023/day_16/: solution.py
2023/day_17/: part_1.py  part_2.py
2023/day_24/: part_1.py  part_2.py
2023/day_25/: part_1.py  sol_a.py  sol_b.py  sol_c.py
